kubernetes/apps/ai/hermes/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: hermes
spec:
    hostnames:
        - hermes.goyangi.io
    parentRefs:
        - name: envoy-internal
          namespace: network
    rules:
        - matches:
            - path:
                type: PathPrefix
                value: /bluebubbles-webhook
          backendRefs:
            - name: hermes-webhook
              port: 8645
        - backendRefs:
            - name: hermes-dashboard
              port: 9119
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: hermes-serve
spec:
    hostnames:
        - hermes-serve.goyangi.io
    parentRefs:
        - name: envoy-internal
          namespace: network
    rules:
        - backendRefs:
            - name: hermes-serve
              port: 9120

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: hermes-webui
spec:
    hostnames:
        - hermes-webui.goyangi.io
    parentRefs:
        - name: envoy-internal
          namespace: network
    rules:
        - backendRefs:
            - name: hermes-webui
              port: 8787

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: hermes-code
spec:
    hostnames:
        - hermes-code.goyangi.io
    parentRefs:
        - name: envoy-internal
          namespace: network
    rules:
        - backendRefs:
            - name: hermes
              port: 12321
